--- a/client/footer/footer.html
+++ b/client/footer/footer.html
@@ -1,4 +1,4 @@
 <div class="panel-default navbar navbar-inverse container-fluid">
     <p class="navbar-text navbar-left"> Proof-Of-Concept</p>
-    <p class="navbar-text pull-right" >&copy; 2016 Dell|EMC All rights reserved.</p>
+    <p class="navbar-text pull-right" >&copy; 2016 Dell EMC All rights reserved.</p>
 </div>
