--- a/client/newDesign/designForm.html
+++ b/client/newDesign/designForm.html
@@ -120,7 +120,7 @@
                 <label class="col-sm-3 control-label">Number of VDC</label>
                 <div class="col-sm-9">
                     <select  name="numberOfVdc" class="form-control" ng-model="design.numberOfVdc" uib-tooltip="Number of VDC/Sites in this environment">
-                        <option value="1">1</option>
+                        <option selected value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
