fixed the storage array port placeholders

--- a/client/newDesign/designForm.html
+++ b/client/newDesign/designForm.html
@@ -300,11 +300,11 @@
                 </p>
 
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.vmax2Smis.user" required placeholder="VMAX-2 SMIS User">
+                    <input  class="form-control" type="text" ng-model="design.vmax2Smis.user" required placeholder="admin">
                 </p>
 
                 <p class="col-sm-1">
-                    <input class="form-control" type="text" ng-model="design.vmax2Smis.port" required placeholder="VMAX-2 SMIS Port">
+                    <input class="form-control" type="text" ng-model="design.vmax2Smis.port" required placeholder="5988/5989">
                 </p>
 
                 <p class="col-sm-2">
@@ -337,10 +337,10 @@
                     <input  class="form-control" type="text" ng-model="design.vmax3Smis.ip" required placeholder="VMAX-3 SMIS IP Address">
                 </p>
                 <p class="col-sm-1">
-                    <input class="form-control" type="text" ng-model="design.vmax3Smis.user" required placeholder="VMAX-3 SMIS User">
+                    <input class="form-control" type="text" ng-model="design.vmax3Smis.user" required placeholder="admin">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.vmax3Smis.port" required placeholder="VMAX-3 SMIS Port">
+                    <input  class="form-control" type="text" ng-model="design.vmax3Smis.port" required placeholder="5988/5989">
                 </p>
                 <p class="col-sm-2">
                     <select  class="form-control" ng-model="design.vmax3.code" >
@@ -372,10 +372,10 @@
                     <input  class="form-control" type="text" ng-model="design.vnxBlock.ip" required placeholder="VNX-Block SMIS IP Address">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.vnxBlock.user" required placeholder="VNX-Block SMIS User">
+                    <input  class="form-control" type="text" ng-model="design.vnxBlock.user" required placeholder="admin">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.vnxBlock.port" required placeholder="VNX-Block SMIS Port">
+                    <input  class="form-control" type="text" ng-model="design.vnxBlock.port" required placeholder="5988/5989">
                 </p>
                 <p class="col-sm-2">
                     <select  class="form-control" ng-model="design.vnxBlock.code" >
@@ -404,10 +404,10 @@
                     <input  class="form-control" type="text" ng-model="design.vplex.ip" required placeholder="VPLEX Mgmt IP Address">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.vplex.user" required placeholder="VPLEX User">
+                    <input  class="form-control" type="text" ng-model="design.vplex.user" required placeholder="service">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.vplex.port" required placeholder="VPLEX Mgmt Port">
+                    <input  class="form-control" type="text" ng-model="design.vplex.port" required placeholder="443">
                 </p>
                 <p class="col-sm-2">
                     <select  class="form-control" ng-model="design.vplex.code" >
@@ -431,10 +431,10 @@
                     <input  class="form-control" type="text" ng-model="design.rp.ip" required placeholder="RP Mgmt IP Address">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.rp.user" required placeholder="RP User">
+                    <input  class="form-control" type="text" ng-model="design.rp.user" required placeholder="admin">
                 </p>
                 <p class="col-sm-1">
-                    <input  class="form-control" type="text" ng-model="design.rp.port" required placeholder="RP Mgmt Port">
+                    <input  class="form-control" type="text" ng-model="design.rp.port" required placeholder="7225">
                 </p>
                 <p class="col-sm-2">
                     <select  class="form-control" ng-model="design.rp.code" >
@@ -533,7 +533,7 @@
                     <input  class="form-control" type="text" ng-model="design.brocade.user" required placeholder="Brocade User">
                 </p>
                 <p class="col-sm-2">
-                    <input  class="form-control" type="text" ng-model="design.brocade.port" required placeholder="Brocade Mgmt Port">
+                    <input  class="form-control" type="text" ng-model="design.brocade.port" required placeholder="5988/5989">
                 </p>
                 <p class="col-sm-2">
                     <input  class="form-control" type="text" ng-model="design.brocade.version" required placeholder="Brocade Version">
@@ -622,7 +622,7 @@
                     <input  class="form-control" type="text" ng-model="design.vcenter.user" required placeholder="vCenter User">
                 </p>
                 <p class="col-sm-2">
-                    <input  class="form-control" type="text" ng-model="design.vcenter.port" required placeholder="vCenter Mgmt Port">
+                    <input  class="form-control" type="text" ng-model="design.vcenter.port" required placeholder="443">
                 </p>
                 <p class="col-sm-2">
                     <input  class="form-control" type="text" ng-model="design.vcenter.version" required placeholder="vCenter Version">
@@ -643,7 +643,7 @@
                     <input  class="form-control" type="text" ng-model="design.windows.user" required placeholder="Windows User">
                 </p>
                 <p class="col-sm-2">
-                    <input  class="form-control" type="text" ng-model="design.windows.port" required placeholder="Windows Mgmt Port">
+                    <input  class="form-control" type="text" ng-model="design.windows.port" required placeholder="5985/5986">
                 </p>
                 <p class="col-sm-2">
                     <input  class="form-control" type="text" ng-model="design.windows.version" required placeholder="Windows Version">
@@ -664,7 +664,7 @@
                     <input  class="form-control" type="text" ng-model="design.rhel.user" required placeholder="Rhel User">
                 </p>
                 <p class="col-sm-2">
-                    <input  class="form-control" type="text" ng-model="design.rhel.port" required placeholder="Rhel Mgmt Port">
+                    <input  class="form-control" type="text" ng-model="design.rhel.port" required placeholder="22">
                 </p>
                 <p class="col-sm-2">
                     <input  class="form-control" type="text" ng-model="design.rhel.version" required placeholder="Rhel Version">
